--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="about" class="about-section">
         <div class="about-container">
             <div class="about-image">
-                <img src="image/profile.jpg" alt="Your Name">
+                <img src="profile.jpg" alt="Your Name">
             </div>
             <div class="about-content">
                 <h2>About Me</h2>
